<resources>
    <string name="app_name">modulelogin</string>

    <!--登录-->
    <string name="login_login_phone">手机号/邮箱号/用户名</string>
    <string name="login_login_password">您的登陆密码</string>
    <string name="login_login_login">登录</string>
    <string name="login_login_forget_password">忘记密码</string>
    <string name="login_login_register">没有账号？去注册</string>
    <string name="login_login_other">——  第三方登录  ——</string>
    <string name="login_login_qq">QQ</string>
    <string name="login_login_chat">微信</string>
    <string name="login_login_phone_hint">请输入手机号/邮箱号/用户名</string>
    <string name="login_login_password_hint">密码不能为空</string>

    <!--注册-->
    <string name="login_register_title">注册新账号</string>
    <string name="login_register_phone">输入手机号码</string>
    <string name="login_register_nickname">请输入昵称</string>


    <string name="login_register_correct_phone">请输入正确的手机号</string>
    <string name="login_register_code">输入验证码</string>
    <string name="login_register_send_code">获取验证码</string>
    <string name="login_register_password">设置初始密码</string>
    <string name="login_confirm_password">再次输入密码</string>

    <string name="login_register_recommend">请输入推荐码(选填)</string>
    <string name="login_register_password_hint">密码不能为空</string>
    <string name="login_register_confirm_password_hint">确认密码不能为空</string>
    <string name="login_register_pass_no_hint">密码不一致</string>

    <string name="login_register_email">设置绑定邮箱（可不填）</string>
    <string name="login_register_agree">点击确认代表您已同意</string>
    <string name="login_register_agree_message">请同意《帅柏商城用户协议》</string>
    <string name="login_register_agreement">《分享茄用户协议》</string>
    <string name="login_register_register">直接注册</string>
    <string name="login_register_perfect">完善信息加入推荐人</string>

    <!--完善信息-->
    <string name="login_perfect_title">完善信息</string>
    <string name="login_perfect_recommend_title">推荐人会员号</string>
    <string name="login_perfect_recommend_id">推荐编号</string>
    <string name="login_perfect_placement_id">安置编号</string>
    <string name="login_perfect_info_title">个人基本信息</string>
    <string name="login_perfect_name">真实姓名</string>
    <string name="login_perfect_sex">性别</string>
    <string name="login_perfect_birthday">出生日期</string>
    <string name="login_perfect_nickname">昵称</string>
    <string name="login_perfect_id">身份证号</string>
    <string name="login_perfect_phone">手机号</string>
    <string name="login_perfect_area">地区</string>
    <string name="login_perfect_detail">详细地址</string>
    <string name="login_perfect_input">请输入</string>
    <string name="login_perfect_choose">请选择</string>
    <string name="login_perfect_detail_hint">街道/小区/门牌号等</string>
    <string name="login_perfect_sure">确认并注册</string>

    <!--注册结果-->
    <string name="login_register_result">注册结果</string>
    <string name="login_register_result_go_home">进入商城</string>
    <string name="login_register_result_go_home_hint">注册成功\n5秒后自动进入商城</string>
    <string name="login_register_result_email_hint">注册成功，我们已向您的邮箱发送了一\n
    封验证邮箱，请尽快验证</string>

    <!--更换手机号-->
    <string name="login_change_phone_title">更换手机号</string>
    <string name="login_change_phone_hint">您已绑定手机号码%1$s\n点击“绑定新手机”我们将向您的当前手机号
    发送一条短信验证码</string>
    <string name="login_change_phone_bound">绑定新手机</string>
    <string name="login_change_phone_code">请输入验证码</string>
    <string name="login_change_phone_phone">请输入新手机号</string>
    <string name="login_change_phone_sure">确认更换</string>
    <string name="login_change_phone_code_hint">请输入验证码</string>
    <string name="login_change_phone_phone_hint">请输入手机号</string>
    <string name="login_change_phone_phone_correct_hint">请输入正确手机号</string>
    <string name="login_change_phone_success">手机号修改成功</string>

    <!--解绑邮箱-->
    <string name="login_unbound_email_title">解绑邮箱</string>
    <string name="login_unbound_email_hint">您已绑定邮箱%1$s\n点击"发送验证码"我们将向您的当前邮箱发送一条验证邮件</string>
    <string name="login_unbound_email">解绑邮箱</string>
    <string name="login_unbound_email_success">解绑邮箱成功</string>

    <!--绑定邮箱-->
    <string name="login_bound_email_title">绑定邮箱</string>
    <string name="login_bound_email_hint">您要绑定的邮箱地址</string>
    <string name="login_bound_email_code_hint">请输入验证码</string>
    <string name="login_bound_email_input_hint">请输入邮箱或验证码</string>
    <string name="login_bound_email_email_error">请输入正确的邮箱</string>
    <string name="login_bound_email_sure">确认绑定</string>
    <string name="login_bound_email_success">绑定邮箱成功</string>

    <!--修改密码-->
    <string name="login_forget_password_login">清设置登录密码</string>
    <string name="login_forget_password_confrim">请再次输入新密码</string>
    <string name="login_forget_password_login_success">密码修改成功</string>
    <string name="login_forget_password_reset">重置密码</string>

    <string name="login_input_old_password">请输入旧密码</string>
    <string name="login_old_password">旧密码</string>
    <string name="login_new_password">新密码</string>
    <string name="login_input_new_password">请输入新密码</string>
    <string name="login_confirm_new_password">确认密码</string>


    <!--完善信息-->
    <string name="login_third_perfect_info_title">完善信息</string>
    <string name="login_third_perfect_info_sure">确认</string>
</resources>
