<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar_head"/>

    <EditText
        android:id="@+id/et_nickname"
        style="@style/login_RegisterEt"
        android:drawableLeft="@drawable/login_nickname"
        android:layout_marginTop="28dp"
        android:hint="@string/login_register_nickname"
        android:inputType="phone"
        android:maxLength="11"/>

    <EditText
        android:id="@+id/et_password"
        style="@style/login_RegisterEt"
        android:drawableLeft="@drawable/login_confirm_password"
        android:hint="@string/login_register_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/et_confirm_password"
        style="@style/login_RegisterEt"
        android:drawableLeft="@drawable/login_password"
        android:hint="@string/login_confirm_password"
        android:inputType="textPassword"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="38dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_agree"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_agreement"
            android:textColor="@color/base_tv_blue"
            android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>