<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/base_toolbar_head"/>

    <EditText
        android:id="@+id/et_phone"
        style="@style/login_RegisterEt"
        android:drawableLeft="@drawable/ic_login_phone"
        android:hint="@string/login_register_phone"
        android:inputType="phone"
        android:maxLength="11" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/login_RegisterEt"
            android:orientation="horizontal"
            >
            <EditText
                android:inputType="number"
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/ic_login_code"
                android:drawablePadding="14dp"
                android:hint="@string/login_register_code"
                android:textColor="@color/base_tv_black"
                android:textColorHint="@color/login_tv_small_gray"
                android:textSize="14sp" />

            <com.app.baselib.widget.SendCodeTV
                android:id="@+id/tv_code"
                android:text="@string/login_register_send_code"
                android:layout_width="wrap_content"
                android:textColor="@color/base_tv_black"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            style="@style/login_RegisterEt"
            android:background="@color/black"/>
    </LinearLayout>

</LinearLayout>